# ghsldownloader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/ghsldownloader/: __init__.py  ghsldownloader.py
src/ghsldownloader/data/: GHSL_tiles.gpkg
tests/: test_ghsldownloader.py
