[tool.poetry]
name = "ghsldownloader"
version = "0.1.0"
description = "Utility package to download GHSL data products."
authors = ["Gonzalo Peraza"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.0"
pandas = "^2.2.2"
geopandas = "^1.0.1"
matplotlib = "^3.9.2"
gdal = "3.11"
rioxarray = "^0.19.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
jupyter = "^1.1.1"
myst-nb = "^1.1.1"
sphinx-autoapi = "^3.3.0"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
